Fixed overlap

--- a/showcase/themes/bootstrap/theme.css
+++ b/showcase/themes/bootstrap/theme.css
@@ -529,7 +529,7 @@
 }
 
 .ui-accordion .ui-accordion-header.ui-state-default a {
-    padding: 8px 15px;
+    padding: 8px 30px;
     color: #0088CC;
 }
 
